@@ -1,0 +1,8 @@
+﻿namespace Nikse.SubtitleEdit.Core.Common
+{
+    public class PluginShortcut
+    {
+        public string Name { get; set; }
+        public string Shortcut { get; set; }
+    }
+}
